# mrkm24-25

lab1/: Лабораторна робота_1_крипт.docx
lab1/Bondar_Kistaiev_FI-42mn/: .gitignore  labaaa.xlsx
lab1/FI-31mn-Karaban-Shevchenko/: Lab_1.docx  Lab_1.py
lab1/FI-31mn_Pankeyeva/: lab1_Панкєєва.docx  lab1_Панкєєва.ipynb
lab1/Fi-31mn_Andrii_Asseko-Nkili_lab_1/: 1.ipynb
lab1/KyrylenkoFI_31mn/: MRKN_lab1.ipynb  main.cpp
lab1/Skorobahatko Maksym, FB31mn/: lab1.py
lab1/burzhymskyi_fi-42mn_nedozhdii_fi-42mn_lab1/cryptopp/: CMakeLists.txt  main.cpp
lab2/: LAB2 (1).ipynb  Лабораторна робота_2_крипт (1).docx
lab2/Bondar_Kistaiev_FI-42mn/: optimus.py  primate.py  rng_test.py
lab2/FI-31mn-Karaban-Shevchenko/: Lab_2.docx  Lab_2.py
lab2/FI=31mn_Pankeyeva/: lab2.docx  lab2_PankeyevaS.ipynb
lab2/Fi-31mn_Andrii_Asseko-Nkili_lab_2/: 2.ipynb
lab2/KyrylenkoFI_31mn/: MRKN_lab2.ipynb
lab2/Skorobahatko Maksym, FB31mn/: lab2.py
lab2/burzhymskyi_fi-42mn_nedozhdii_fi-42mn_lab2/: CMakeLists.txt  main.cpp
lab2/burzhymskyi_fi-42mn_nedozhdii_fi-42mn_lab2/src/test/: test.h
lab3/: Лаб3 Кр.docx
lab3/Bondar_Kistaiev_FI-42mn/: pipipy_sign.ipynb  sign.py
lab3/FI-31mn-Karaban-Shevchenko/: Lab_3.docx  Lab_3.py
lab3/FI-31mn_PankeyevaS/: lab3.docx  lab3.py
lab3/Fi-31mn_Andrii_Asseko-Nkili_lab_3/: 3.ipynb
lab3/KyrylenkoFI_31mn/: MRKN_lab3.ipynb
lab3/Skorobahatko Maksym, FB31mn/: lab3.py
lab3/burzhymskyi_fi-42mn_nedozhdii_fi-42mn_lab2/: CMakeLists.txt  main.cpp
lab3/Каюк_Коробан_Кухар_ФІ-31мн_лаб/: LAB3cr.ipynb
lab4/: main.py
lab4/FI-31mn-Karaban-Shevchenko/: Lab_4.docx  Lab_4.py
lab4/Fi-31mn_Andrii_Asseko-Nkili_lab_4/: 4.ipynb
lab4/KyrylenkoFI_31mn/: MRKN_lab4.ipynb
lab4/subgroup_Koroban_Kayuk_Kuhar/: attacks.py  (+1 more)
(+53 files in other folders)
